<resources>
    <string name="deeplink_applicationId">com.nbcsports.regional</string>
    <string name="app_name">Sky Italia POC</string>
    <string name="settings">Settings</string>
    <string name="plus_minus_teams">+/- TEAMS</string>
    <string name="nbc_regional_sports">NBC SPORTS</string>
    <string name="more_teams">More Teams</string>
    <string name="persistent_highlight_backward">Persistent Highlight Backward</string>
    <string name="persistent_highlight_forward">Persistent Highlight Forward</string>
    <string name="guest_user">Guest User</string>
    <string name="my_teams">My Teams</string>
    <string name="plus_minus_space_teams">+/-\nTeams</string>
    <string name="more_nteams">More\nTeams</string>
    <string name="save_teams">SAVE TEAMS</string>
    <string name="hold_and_drag_to_reorder">Hold and Drag to Reorder</string>
    <string name="team_selector_select_all">Select All</string>
    <string name="team_selector_remove_all">Remove All</string>
    <string name="edit_reorder_teams">Edit/Reorder Teams</string>
    <string name="view_less">VIEW LESS</string>
    <string name="view_more">VIEW MORE</string>
    <string name="loading">LOADING</string>
    <string name="upnext_label">UP NEXT</string>
    <string name="week_single"> wk ago</string>
    <string name="week_plural"> wks ago</string>
    <string name="day_single"> day ago</string>
    <string name="day_plural"> days ago</string>
    <string name="hour_single"> hr ago</string>
    <string name="hour_plural"> hrs ago</string>
    <string name="min_single"> min ago</string>
    <string name="min_plural"> mins ago</string>
    <string name="just_now"> just now</string>
    <string name="sec_plural"> secs ago</string>
    <string name="valid_utc">^\\d{4}-(?:0[1-9]|1[0-2])-(?:0[1-9]|[1-2]\\d|3[0-1])T(?:[0-1]\\d|2[0-3]):[0-5]\\d:[0-5]\\dZ</string>
    <string name="invalid_utc_prompt">Invalid Input</string>
    <string name="negative_time_prompt">N/A</string>
    <string name="time_format_string_z">yyyy-MM-dd\'T\'HH:mm:ss\'Z\'</string>
    <string name="time_format_string_x">yyyy-MM-dd\'T\'HH:mm:ssZZZZZ</string>
    <string name="close">CLOSE</string>
    <string name="deeplink_action_open">open</string>
    <string name="deeplink_action_linkto">linkto</string>
    <string name="cable_provider_instruction">Sign In to your Cable Provider Account and enjoy Live Games!</string>
    <string name="zero_outs">0 OUTS</string>
    <string name="databar_today">TODAY %s</string>
    <string name="final_score">FINAL SCORE</string>
    <string name="game_postponed">GAME POSTPONED</string>
    <string name="game_delayed">GAME DELAYED</string>
    <string name="game_suspended">GAME SUSPENDED</string>
    <string name="game_cancelled">GAME CANCELLED</string>
    <string name="powerplay">PP</string>
    <string name="schedule_summary_final">FINAL</string>
    <string name="schedule_summary_format_upcoming">%s %d\n%d%s %s</string>
    <string name="schedule_summary_tbd">TBD</string>
    <string name="roster_pounds_unit">lbs</string>
    <string name="roster_years_old">yo</string>
    <string name="file_provider_directory">shared</string>
    <string name="file_provider_authority">com.nbcsports.regional.dev</string>
    <string name="share_chooser_title">Send to a friend</string>
    <string name="share_text_template">"Hey, check this out!\n\n%s\n\n%s"</string>
    <string name="xfinity_name">XFINITY</string>
    <string name="authentication_search_no_result_found">No Results Found.</string>
    <string name="authentication_logo_heading">Providers Near You</string>
    <string name="authentication_all_calble_provider">All Cable Providers</string>
    <string name="authentication_search">Search</string>
    <string name="alert_system_default_text">System</string>
    <string name="alert_playback_error_default_text">Oops, something happened. Please close your app and try again.</string>
    <string name="alert_network_error_default_text">You appear to be offline. Please restore your internet connection to continue.</string>
    <string name="alert_server_error_default_text">There was a problem loading this page</string>
    <string name="alert_wifi_error_default_text">WIFI connection lost, update your settings to continue.</string>
    <string name="alert_cellular_data_not_allow_default_text">Using cellular data to play content is disabled. Please change your settings to play content.</string>
    <string name="alert_location_permission">Please enable Location Permission for the MyTeams App in app info to watch this stream.</string>
    <string name="alert_location_permission_title">Settings Error</string>
    <string name="alert_authn_error">There was a problem playing the content. Please log in again</string>
    <string name="alert_authz_error">Sorry, but this team\'s live video isn\'t included with your cable package.</string>
    <string name="stream_authentication_empty_name_indicator">empty name indicator</string>
    <string name="team_news_all">All</string>
    <string name="team_news_team_news">Team News</string>
    <string name="team_news_game_start">Game Start</string>
    <string name="team_news_final_score">Final Score</string>
    <string name="team_news_section_title">Team News</string>
    <string name="team_news_section_edit_notifications_message">Edit your Notification Settings</string>
    <string name="team_news_section_saved_notifications_message">All changes are saved automatically.</string>
    <string name="notifications_alert_title">Notifications</string>
    <string name="notifications_alert_message">Are you sure you want to turn all notifications off? You can edit team notifications per team</string>
    <string name="notifications_alert_turn_off">Turn Off</string>
    <string name="notifications_alert_cancel">Cancel</string>
    <string name="logout_successfully">Logged out successfully</string>
    <string name="live_in_app">LIVE IN-APP</string>
    <string name="settings_my_teams">My Teams</string>
    <string name="settings_edit_teams">Edit/Reorder Teams</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_allow_notifications">Allow Notifications</string>
    <string name="settings_breaking_news">Breaking News</string>
    <string name="settings_team_news">Team News</string>
    <string name="settings_data">Data</string>
    <string name="settings_media_settings">Media Settings</string>
    <string name="settings_provider">Provider</string>
    <string name="settings_logout">Logout From Provider</string>
    <string name="settings_support">Support</string>
    <string name="settings_support_update_app">Update App</string>
    <string name="settings_support_faq">FAQ</string>
    <string name="settings_support_feedback">Feedback</string>
    <string name="settings_support_privacy">Privacy</string>
    <string name="settings_support_tou">Term of Use</string>
    <string name="settings_support_share">Share the App</string>
    <string name="settings_support_not_matched">No support matched</string>
    <string name="switch_screen_most_recent">Last Viewed</string>
    <string name="switch_screen_live">Live</string>
    <string name="xfinity_id">Comcast_SSO</string>
    <string name="media_settings_title">Media\nSettings</string>
    <string name="live_video_preferences">Live Video Preferences:</string>
    <string name="cellular_data_for_live_stream_title">Cellular data for live stream</string>
    <string name="cellular_data_for_live_stream_message">Allow the use of Cellular data for live streaming.</string>
    <string name="auto_play_live_games_title">Auto play live games</string>
    <string name="media_stream_preferences">Media Stream Preferences:</string>
    <string name="cellular_data_for_media_stream_title">Cellular data for media stream</string>
    <string name="cellular_data_for_media_stream_message">Allow the use of Cellular data for non-live video and audio streaming.</string>
    <string name="auto_play_videos_title">Auto play videos</string>
    <string name="feed_promo_title">Watch Live</string>
    <string name="fab_outro_success">SUCCESS!</string>
    <string name="your_teams_are_right_behind_this_button">Your Teams are right behind this button.</string>
    <string name="nbc_regional_sports_low_case">My Teams by NBC Sports</string>
    <string name="hold_the_button_and_drag_to_your_team">PRESS &amp; HOLD THE BUTTON AND DRAG TO A TEAM THEN RELEASE.</string>
    <string name="slide_indicator">SLIDE</string>
    <string name="go_live">Go Live</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ftue_fab_flick_tag">DID YOU KNOW?</string>
    <string name="ftue_fab_flick_message">To move quickly between teams, flick the nav button right or left.</string>
    <string name="ftue_fab_tap_tag">DID YOU KNOW?</string>
    <string name="ftue_fab_tap_message">Tap the button to close the article.</string>
    <string name="ftue_data_menu_tag">DID YOU KNOW?</string>
    <string name="ftue_data_menu_message">To access team\'s scores, standings, and schedules, tap on the data bar at the top of the screen.</string>
    <string name="splash_screen_animation_filename">splash_screen.json</string>
    <string name="splash_screen_animation_asset_directory">images/</string>
    <string name="thefeed_label">The Feed</string>
    <string name="teamview_card_episode_duration_format">%s%s%s %s</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">SIIRytl2tHshkabxjMAmgtE6g</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">AjsMeoB0xbcQ9rmIjn8AxePmgHQpOQf0ObhbcYklRBjJVGXwpS</string>
    <string name="by_rsn">by RSN</string>
    <string name="team_news_tag">TEAM NEWS</string>
    <string name="media_setting_tag">MEDIA SETTING</string>
    <string name="stream_auth_tag">TEAM NEWS</string>
    <string name="stepped_story_tag">STEPPED STORY</string>
    <string name="image_size_suffix">_640x360.jpg</string>
    <string name="debug_prompt_enter_the_password">Enter the password</string>
    <string name="debug_pass_word_here">Pass word here</string>
    <string name="debug_password">uuddlrlrbass</string>
    <string name="debug_password_success_prompt">Successful, now entering Debug page</string>
    <string name="debug_password_fail_prompt">Password incorrect</string>
    <string name="debug_tag">DEBUG</string>
    <string name="chromecast_app_id">FEF31DBB</string>
    <string name="alert_entitlement_error_rsn">This program may have viewing restrictions. Please try signing in again.</string>
    <string name="alert_entitlement_error_gmo">This program is not available in your region due to rights restrictions.</string>
    <string name="chromecast_connect">Chromecast</string>
    <string name="chromecast_failed_title">Chromecast</string>
    <string name="chromecast_failed_message">Chromecast Session failed: </string>
    <string name="chromecast_error_title">Chromecast</string>
    <string name="chromecast_error_message">Chromecast Session ended with error: </string>
    <string name="chromecast_ended_title">Chromecast</string>
    <string name="chromecast_ended_message">Chromecast Session ended successfully!</string>
    <string name="chromecast_asset_error_title">Chromecast</string>
    <string name="chromecast_asset_error_message">Unable to cast this asset</string>
    <string name="rate_and_review"><![CDATA[Rate & Review]]></string>
    <string name="send_feedback">Send Feedback</string>
    <string name="rate_app_message">Are you enjoying the MyTeams app? If so, please rate it and leave us a review? If not, please let us know why!</string>
    <string name="rate_app_title">Enjoying the App?</string>
    <string name="remind_me_later">Remind Me Later</string>
    <string name="league">LEAGUE</string>
    <string name="conference">CONFERENCE</string>
    <string name="division">DIVISION</string>
    <string name="league_standings">LEAGUE STANDINGS</string>
</resources>