<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fab_outro_root_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="com.nbcsports.regional.nbc_rsn.faboutro.FabOutroFragment">

    <ImageView
        android:id="@+id/fab_outro_background_image_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/onboarding_success_background"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fab_outro_top_success_root_constraint_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rectangle_white_border_no_filled_background"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="@id/root_guideline_v03"
        app:layout_constraintRight_toRightOf="@id/root_guideline_v97"
        app:layout_constraintTop_toTopOf="@+id/root_guideline_h03"
        app:layout_constraintDimensionRatio="H, 345:180">

        <ImageView
            android:id="@+id/fab_outro_top_success_logo_image_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_peacock_square"
            android:scaleType="fitCenter"
            android:background="@color/white"
            android:padding="8dp"
            app:layout_constraintTop_toTopOf="@id/fab_outro_top_success_root_constraint_layout"
            app:layout_constraintRight_toRightOf="@id/fab_outro_top_success_root_constraint_layout"/>

        <TextView
            android:id="@+id/fab_outro_top_success_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fab_outro_success"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:gravity="center"
            android:letterSpacing="0.11"
            android:fontFamily="@font/nbcsn_frank_bold"
            app:layout_constraintLeft_toLeftOf="@id/fab_outro_top_success_root_constraint_layout"
            app:layout_constraintRight_toRightOf="@id/fab_outro_top_success_root_constraint_layout"
            app:layout_constraintTop_toTopOf="@id/fab_outro_top_success_root_constraint_layout"
            app:layout_constraintBottom_toBottomOf="@id/fab_outro_top_success_root_constraint_layout"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fab_outro_top_success_guideline_h30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.30"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fab_outro_middle_content_root_constraint_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/fab_outro_top_success_root_constraint_layout"
        app:layout_constraintLeft_toLeftOf="@id/root_guideline_v03"
        app:layout_constraintRight_toRightOf="@id/root_guideline_v97">

        <TextView
            android:id="@+id/fab_outro_middle_content_left_text_view"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textColor="@color/white"
            android:text="@string/nbc_regional_sports_low_case"
            android:textSize="18sp"
            android:lineSpacingExtra="0dp"
            android:gravity="end"
            android:fontFamily="@font/foundersgrotesk_regular"
            android:rotation="270"
            app:layout_constraintTop_toTopOf="@id/fab_outro_middle_content_guideline_h15"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/fab_outro_middle_content_guideline_minus_v01"/>

        <TextView
            android:id="@+id/fab_outro_middle_content_right_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/your_teams_are_right_behind_this_button"
            android:textColor="@color/white"
            android:textSize="42sp"
            android:lineSpacingExtra="5sp"
            android:fontFamily="@font/publico_headline_black"
            android:paddingBottom="5dp"
            app:layout_constraintTop_toTopOf="@id/fab_outro_middle_content_guideline_h05"
            app:layout_constraintLeft_toLeftOf="@id/fab_outro_middle_content_guideline_v18"
            app:layout_constraintRight_toRightOf="@id/fab_outro_middle_content_guideline_v90"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fab_outro_middle_content_guideline_minus_v01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="-0.01"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fab_outro_middle_content_guideline_v18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.18"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fab_outro_middle_content_guideline_v90"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.90"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fab_outro_middle_content_guideline_h05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fab_outro_middle_content_guideline_h15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fab_outro_bottom_content_root_constraint_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/fab_outro_middle_content_root_constraint_layout"
        app:layout_constraintLeft_toLeftOf="@+id/root_guideline_v03"
        app:layout_constraintRight_toRightOf="@+id/root_guideline_v97">

        <TextView
            android:id="@+id/fab_outro_bottom_content_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hold_the_button_and_drag_to_your_team"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:letterSpacing="0.03"
            android:lineSpacingExtra="8sp"
            android:fontFamily="@font/founders_grotesk_mono_app_regular"
            app:layout_constraintLeft_toLeftOf="@+id/fab_outro_bottom_content_guideline_v18"
            app:layout_constraintRight_toRightOf="@id/fab_outro_bottom_content_guideline_v90"
            app:layout_constraintTop_toTopOf="@+id/fab_outro_bottom_content_guideline_h15"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fab_outro_bottom_content_guideline_v18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.18"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fab_outro_bottom_content_guideline_v90"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.90"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fab_outro_bottom_content_guideline_h15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/root_virtual_bottom_moving_guideline_relative_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/root_guideline_h97"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/root_guideline_v03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/root_guideline_v97"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/root_guideline_h03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/root_guideline_h97"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.97"/>

</androidx.constraintlayout.widget.ConstraintLayout>
